@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + direction:int
    - shootStrategy:IShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase, int max):void
    + getHp():int
    + shoot():List<BaseBullet>
    # getDroppableProps():List<PropType>
    + createProp():Optional<BaseProp>
    + setShootStrategy(IShootStrategy strategy):void
 }


class HeroAircraft {
    - instance:HeroAircraft {static}
    + getInstance():HeroAircraft {static}
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}
AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}
AbstractAircraft <|-- MobEnemy

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + getDroppableProps():List<PropType>
}
AbstractAircraft <|-- EliteEnemy

class ElitePlusEnemy {
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + getDroppableProps():List<PropType>
}
AbstractAircraft <|-- ElitePlusEnemy

class EliteProEnemy {
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + getDroppableProps():List<PropType>
}
AbstractAircraft <|-- EliteProEnemy

class Boss {
    + Boss(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + getDroppableProps():List<PropType>
}
AbstractAircraft <|-- Boss

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY),
    + forward():void
    + active():void{abstract}
}

class BloodProp {
    - heroAircraft:HeroAircraft
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}
BaseProp <|-- BloodProp

class BulletProp {
    + BulletProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}
BaseProp <|-- BulletProp

class BulletPlusProp {
    + BulletPlusProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}
BaseProp <|-- BulledPlusProp

class BombProp {
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}
BaseProp <|-- BombProp

class FreezeProp {
    + FreezeProp(int locationX, int locationY, int speedX, int speedY)
    + active():void
}
BaseProp <|-- FreezeProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp

@enduml